codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_running.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                             ! for shell commands               "
"  ctrl + j for newline                       tab to queue message               "
"  @ for file paths                           ctrl + v to paste images           "
"  ctrl + g to edit in external editor        esc esc to edit previous message   "
"  ctrl + r search history                    ctrl + c to interrupt              "
"  alt + , reasoning down                     alt + . reasoning up               "
"  ctrl + t to view transcript                                                   "
"                                                                                "
"  customize shortcuts with /keymap                                              "
